feat(profile): implement change password API
